--- a/binary_tree/Makefile
+++ b/binary_tree/Makefile
@@ -1,6 +1,6 @@
-PJ4 :main.o
-	g++ -Wall -o PJ4 main.o
+MAIN :main.o
+	g++ -Wall -o MAIN main.o
 main.o :main.cpp
 	g++ -Wall -c main.cpp
 clean :
-	rm *.o PJ4
+	rm *.o MAIN
